# ShellPro

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  TerminalPane.tsx  api.ts  appState.ts  appTypes.ts  fileUtils.ts  i18n.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  lib.rs  main.rs  models.rs  openssh.rs  workspace_files.rs
src/components/: AiInspector.tsx  FileEditor.tsx  FileExplorer.tsx  ProfileEditor.tsx  QuickCommandPanel.tsx  SessionOverview.tsx  SettingsView.tsx  SuggestionCard.tsx  WorkspaceShell.tsx
