[package]
name = "shellpro"
version = "0.1.0"
description = "ShellPro terminal, SSH manager, and safe AI command assistant"
authors = ["ShellPro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shellpro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
chrono = "0.4.45"
regex = "1.12.3"
dirs = "6.0.0"
keyring = "4.0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring-core = "1.0.0"
